# skeleton_refinement

./: 404.html  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/workflows/: conda.yml  gh-pages.yml  pip_build.yml
conda/env/: skref.yaml
conda/recipe/: meta.yaml
dev/: index.html
docs/: dev.md  index.md
reference/SUMMARY/: index.html
reference/skeleton_refinement/: index.html
reference/skeleton_refinement/cli/: index.html
reference/skeleton_refinement/cli/refine_skeleton/: index.html
reference/skeleton_refinement/deformable_registration/: index.html
reference/skeleton_refinement/expectation_maximization_registration/: index.html
reference/skeleton_refinement/io/: index.html
reference/skeleton_refinement/stochastic_registration/: index.html
reference/skeleton_refinement/utilities/: index.html
search/: search_index.json
src/skeleton_refinement/: deformable_registration.py  expectation_maximization_registration.py  io.py  stochastic_registration.py  utilities.py
src/skeleton_refinement/cli/: refine_skeleton.py
