[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "skeleton_refinement"
version = "0.1.1"
dependencies = [
    "matplotlib",
    "networkx",
    "numpy",
    "plyfile",
    "scikit-learn"
]
description = "Skeletonization of Plant Point Cloud Data Using Stochastic Optimization Framework."
readme = "README.md"
requires-python = ">=3.8"
license = { 'text' = "GPL-3.0-or-later" }   # to replace by "GPL-3.0-or-later" only in next release, pending deprecation
authors = [
    { name = "Ayan Chaudhury", email = "ayanchaudhury.cs@gmail.com" },
    { name = "Christophe Godin", email = "christophe.godin@inria.fr" },
]
maintainers = [
    { name = "Jonathan Legrand", email = "jonathan.legrand@ens-lyon.fr" }
]
keywords = [
    "Robotics for Microfarms",
    "ROMI",
    "Skeleton",
    "Point-cloud",
    "Stochastic Optimization",
    "Gaussian Mixture Models",
    "Expectation Maximization",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Operating System :: OS Independent",
    "Natural Language :: English",
]

[project.scripts]
refine_skeleton = "skeleton_refinement.cli.refine_skeleton:main"

[project.urls]
homepage = "https://romi-project.eu/"
documentation = "https://docs.romi-project.eu/plant_imager/"
source = "https://github.com/romi/skeleton_refinement"
issues = "https://github.com/romi/skeleton_refinement/issues"

[project.optional-dependencies]
doc = [
    "mkdocs",
    "mkdocs-material",
    "mkdocstrings[python]",
    "pymdown-extensions",
    "markdown-exec[ansi]",
    "mkdocs-gen-files",
    "mkdocs-literate-nav",
    "mkdocs-section-index",
]
test = [
    "nose2[coverage]",
    "coverage[toml]",
]
nb = [
    "notebook",
    "ipywidgets",
    "plotly",
]